--- a/index.html
+++ b/index.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta name="title" content="Colin Kearns">
+<meta name="description" content="Full Stack Web Developer">
+<meta itemprop="name" content="Colin Kearns">
+<meta itemprop="description" content="An Exploration of Presidential Primary Expenditures by Colin Kearns">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<title>Campaign Expenditures - Colin Kearns</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <link rel="stylesheet" href="styles.css">
+
+<head>
+  <title>Colin Kearns</title>
+  <base target="_blank">
+</head>
+
 <body>
-  <div id = "projects-button" class="glitch_word_box">
-    <div class="line"></div>
-    <h1 id="word" class="glitch_word0">Projects</h1>
-    <h1 id="word1" class="glitch_word1">Projects</h1>
-    <h1 id="word2" class="glitch_word2">Projects</h1>
+  <div class="site-container">
+    <div class="projects-button-container">
+      <div id="projects-button" class="glitch_word_box">
+        <div class="line"></div>
+        <p id="word" class="glitch_word0">Projects</p>
+        <p id="word1" class="glitch_word1">Projects</p>
+        <p id="word2" class="glitch_word2">Projects</p>
+      </div>
+    </div>
+    <aside>
+      <div class="project">
+        <a href="http://www.campaignexpenditures.com">
+          <h2 class="project-title">Campaign Expenditures</h2>
+          <p>D3.js, jQuery, Underscore.js</p>
+        </a>
+      </div>
+      <div class="project">
+        <a href="http://assembler-anticipation-31347.bitballoon.com/">
+          <h2 class="project-title">Drake Four</h2>
+          <p>jQuery, JavaScript</p>
+        </a>
+      </div>
+      <div class="project">
+        <a href="http://lyricalmashup.com">
+          <h2 class="project-title">Lyrical Mashup</h2>
+          <p>Node.js, Spotify API</p>
+        </a>
+      </div>
+    </aside>
+    <section class="content">
+      <div class="contact">
+        <h1 id="name">Colin Kearns</h1>
+        <h2>Full Stack Web Developer in NYC</h2>
+        <a href="mailto:ckearns1210@gmail.com">Email</a>
+        <a href="https://twitter.com/CoKearns">Twitter</a>
+        <a href="https://github.com/ckearns1210">Github</a>
+        <a href="https://www.linkedin.com/in/colin-kearns-41426654">LinkedIn</a>
+      </div>
+    </section>
   </div>
-  <aside>
-    <div class="project">
-      <h2>Lyrical Smash</h2>
-      <p>Spotify API, Musixmatch API, Node.js</p>
-    </div>
-    <div class="project" >
-      <h2>Drake Four</h2>
-      <p>JQuery, Javascript</p>
-    </div>
-    <div class="project">
-      <h2>Campaign Expenditures</h2>
-      <p>D3, JQuery, Underscore</p>
-    </div>
-  </aside>
-  <section class="content">
-    <h1>Colin Kearns</h1>
-    <h2>Full Stack Web Developer in NYC</h2>
-    <a href="mailto:ckearns1210@gmail.com">ckearns1210@gmail.com</a>
-    <a href="https://twitter.com/CoKearns">Twitter</a>
-    <a href="https://github.com/ckearns1210">Github</a>
-    <a href="https://www.linkedin.com/in/colin-kearns-41426654">LinkedIn</a>
-  </section>
-  </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js"></script>
-  <script src="app.js"></script>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js"></script>
+<script src="app.js"></script>
