--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <meta name="title" content="Colin Kearns">
 <meta name="description" content="Full Stack Web Developer">
 <meta itemprop="name" content="Colin Kearns">
-<meta itemprop="description" content="An Exploration of Presidential Primary Expenditures by Colin Kearns">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<title>Campaign Expenditures - Colin Kearns</title>
+<title>Colin Kearns</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <link rel="stylesheet" href="styles.css">
 
@@ -26,6 +25,7 @@
       </div>
     </div>
     <aside>
+      <div class="aside">
       <div class="project">
         <a href="http://www.campaignexpenditures.com">
           <h2 class="project-title">Campaign Expenditures</h2>
@@ -33,7 +33,7 @@
         </a>
       </div>
       <div class="project">
-        <a href="http://assembler-anticipation-31347.bitballoon.com/">
+        <a href="http://www.drakefour.com">
           <h2 class="project-title">Drake Four</h2>
           <p>jQuery, JavaScript</p>
         </a>
@@ -44,6 +44,29 @@
           <p>Node.js, Spotify API</p>
         </a>
       </div>
+      <div class="project">
+        <a href="https://bestguest.herokuapp.com/">
+          <h2 class="project-title">Best Guest</h2>
+          <p>Ruby on Rails, PostgresSQL</p>
+        </a>
+      </div>
+      <div class="project hidden-mobile">
+        <a href="https://getshortcut.co/">
+          <h2 class="project-title">Shortcut Mobile, Inc.</h2>
+          <h3 class="sub-title">Professional Project</h3>
+          <p>Angular 2, Typescript, Custom CSS Components, MailChimp, Twillio, RxJS, Google Maps, AWS ELB, AWS CLI, Typeform, Webpack, UI for User Profiles and Booking in Development, Express, PM2, Google Analytics, SEO Services</p>
+        </a>
+      </div>
+      </div>
+      <div class="aside hidden-desktop">
+      <div class="project center">
+        <a href="http://www.getshortcut.co/">
+          <h2 class="project-title">Shortcut Mobile, Inc.</h2>
+          <h3 class="sub-title">Professional Project</h3>
+          <p>Angular 2, Typescript, RxJS, AWS ELB, AWS CLI, Custom CSS Components, MailChimp, Twillio, Google Maps, Typeform, Webpack, Express, PM2, Google Analytics, SEO Services, UI for User Profiles and Booking in Development</p>
+        </a>
+      </div>
+      </div>
     </aside>
     <section class="content">
       <div class="contact">
@@ -51,7 +74,7 @@
         <h2>Full Stack Web Developer in NYC</h2>
         <a href="mailto:ckearns1210@gmail.com">Email</a>
         <a href="https://twitter.com/CoKearns">Twitter</a>
-        <a href="https://github.com/ckearns1210">Github</a>
+        <a href="https://github.com/ckearns1210">GitHub</a>
         <a href="https://www.linkedin.com/in/colin-kearns-41426654">LinkedIn</a>
       </div>
     </section>
