fix shortcut copy

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="http://www.getshortcut.co/">
           <h2 class="project-title">Shortcut Mobile, Inc.</h2>
           <h3 class="sub-title">Professional Project</h3>
-          <p>Angular 2, Typescript, RxJS, AWS ELB, AWS CLI, Custom CSS Components, MailChimp, Twillio, Google Maps, Typeform, Webpack, Express, PM2, Google Analytics, SEO Services, UI for User Profiles and Booking in Development</p>
+          <p>Angular 2, Typescript, RxJS, AWS ELB, AWS CLI, Express, PM2, Webpack, Custom CSS Components, MailChimp, Twillio, Google Maps, Typeform, Google Analytics, SEO Services, Intercom Messaging, UI for User Profiles and Booking in Development</p>
         </a>
       </div>
       </div>
