fixed mobile issues

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     </div>
     <aside>
       <div class="aside">
+        <div class="project hidden-mobile">
+          <a href="http://getshortcut.co/">
+            <h2 class="project-title">Shortcut Mobile, Inc.</h2>
+            <h3 class="sub-title">Professional Project</h3>
+            <p>Angular 2, Typescript, Custom CSS Components, MailChimp, Twillio, RxJS, Google Maps, AWS ELB, AWS CLI, Typeform, Webpack, UI for User Profiles and Booking in Development, Express, PM2, Google Analytics, SEO Services</p>
+          </a>
+        </div>
       <div class="project">
         <a href="http://www.campaignexpenditures.com">
           <h2 class="project-title">Campaign Expenditures</h2>
@@ -50,13 +57,7 @@
           <p>Ruby on Rails, PostgresSQL</p>
         </a>
       </div>
-      <div class="project hidden-mobile">
-        <a href="https://getshortcut.co/">
-          <h2 class="project-title">Shortcut Mobile, Inc.</h2>
-          <h3 class="sub-title">Professional Project</h3>
-          <p>Angular 2, Typescript, Custom CSS Components, MailChimp, Twillio, RxJS, Google Maps, AWS ELB, AWS CLI, Typeform, Webpack, UI for User Profiles and Booking in Development, Express, PM2, Google Analytics, SEO Services</p>
-        </a>
-      </div>
+
       </div>
       <div class="aside hidden-desktop">
       <div class="project center">
