--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="site-container">
     <div class="projects-button-container">
-      <div id="projects-button" class="glitch_word_box">
+      <div id="projects-button" class="glitch_word_box fade-in two">
         <div class="line"></div>
         <p id="word" class="glitch_word0">Projects</p>
         <p id="word1" class="glitch_word1">Projects</p>
@@ -31,30 +31,42 @@
             <h2 class="project-title">Shortcut Mobile, Inc.</h2>
             <h3 class="sub-title">Professional Project</h3>
             <p>Angular 2, Typescript, Custom CSS Components, MailChimp, Twillio, RxJS, Google Maps, AWS ELB, AWS CLI, Typeform, Webpack, UI for User Profiles and Booking in Development, Express, PM2, Google Analytics, SEO Services</p>
+            <i class="emoji barber"></i>
+          </a>
+        </div>
+        <div class="project hidden-mobile">
+          <a href="http://starwarsangular2.com/">
+            <h2 class="project-title">Star Wars Angular2</h2>
+            <p>Angular 2 Http Sample App with RxJs and NgAnimate using http://swapi.co/ API, Typescript, Webpack</p>
+            <i class="emoji space"></i>
           </a>
         </div>
       <div class="project">
         <a href="http://www.campaignexpenditures.com">
           <h2 class="project-title">Campaign Expenditures</h2>
           <p>D3.js, jQuery, Underscore.js</p>
+          <i class="emoji cash"></i>
         </a>
       </div>
       <div class="project">
         <a href="http://www.drakefour.com">
           <h2 class="project-title">Drake Four</h2>
           <p>jQuery, JavaScript</p>
+          <i class="emoji drake"></i>
         </a>
       </div>
       <div class="project">
         <a href="http://lyricalmashup.com">
           <h2 class="project-title">Lyrical Mashup</h2>
           <p>Node.js, Spotify API</p>
+          <i class="emoji music"></i>
         </a>
       </div>
       <div class="project">
         <a href="https://bestguest.herokuapp.com/">
           <h2 class="project-title">Best Guest</h2>
           <p>Ruby on Rails, PostgresSQL</p>
+          <i class="emoji party"></i>
         </a>
       </div>
 
@@ -65,19 +77,33 @@
           <h2 class="project-title">Shortcut Mobile, Inc.</h2>
           <h3 class="sub-title">Professional Project</h3>
           <p>Angular 2, Typescript, RxJS, AWS ELB, AWS CLI, Express, PM2, Webpack, Custom CSS Components, MailChimp, Twillio, Google Maps, Typeform, Google Analytics, SEO Services, Intercom Messaging, UI for User Profiles and Booking in Development</p>
+          <i class="emoji barber"></i>
+        </a>
+      </div>
+      <div class="project center">
+        <a href="http://starwarsangular2.com/">
+          <h2 class="project-title">Star Wars Angular2</h2>
+          <p>Angular 2 Http Sample App with RxJs and NgAnimate using http://swapi.co/ API, Typescript, Webpack</p>
+          <i class="emoji space"></i>
         </a>
       </div>
       </div>
     </aside>
-    <section class="content">
-      <div class="contact">
+    <section class="content" id="contact">
+      <div class="contact fade-in one">
         <h1 id="name">Colin Kearns</h1>
         <h2>Full Stack Web Developer in NYC</h2>
-        <a href="mailto:ckearns1210@gmail.com">Email</a>
+        <a href="mailto:ckearns1210@gmail.com" target="_blank">Email</a>
         <a href="https://twitter.com/CoKearns">Twitter</a>
         <a href="https://github.com/ckearns1210">GitHub</a>
         <a href="https://www.linkedin.com/in/colin-kearns-41426654">LinkedIn</a>
       </div>
+
+      <h2 class="byline" id="byline">Press Space Bar</h2>
+
+      <div class="balls fade-in-slow three"></div>
+
+
     </section>
   </div>
 </body>
